--- a/css/style.css
+++ b/css/style.css
@@ -25,16 +25,16 @@ h6 {
 }
 
 h1 {
-  font-size: 40px;
-  color: #f5a623;
-  line-height: 48px;
+  font-size: 36px;
+  color: #cc0000;
+  line-height: 40px;
   display: inline;
 }
 
 h2 {
   font-weight: bold;
   font-size: 24px;
-  color: #999;
+  color: #8a8a5c;
   line-height: 29px;
   padding: 10px;
 }
@@ -129,7 +129,7 @@ a {
 
 /* TODO: Replace with image later */
 #header {
-  background-color: #484848;
+background-image: url(https://i.imgur.com/A2rqm.png);
 }
 
 .flex-box {
@@ -159,16 +159,19 @@ ul {
 .biopic {
   float: left;
   padding: 10px;
-  width: 200px;
+  width: 150px;
   display: none;
 }
 
 img {
-  padding: 10px;
+  padding-top: 10px;
+  padding-bottom: 10px;
 }
 
 span {
   padding: 5px;
+  font-weight: bold;
+  color: #ffffff
 }
 
 #lets-connect {
